增加HIVE&HBase详解笔记